Fix PUT endpoint
